force-app/main/default/objects/VisMed_Bajas__c/VisMed_Bajas__c.object-meta.xml
<CustomObject>
    <description>Objeto para gestionar las bajas de registros</description>
    <label>Bajas</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Bajas Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bajas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>