force-app/main/default/objects/VisMed_Bajas__c/fields/APM__c.field-meta.xml
<CustomField>
    <fullName>APM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>APM</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Visitador Medico</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bajas</relationshipLabel>
    <relationshipName>Bajas</relationshipName>
    <type>Lookup</type>
</CustomField>