force-app/main/default/objects/VisMed_Bajas__c/fields/Aprobador_Final__c.field-meta.xml
<CustomField>
    <fullName>Aprobador_Final__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aprobador Final</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bajas</relationshipName>
    <type>Lookup</type>
</CustomField>