force-app/main/default/objects/VisMed_Bajas__c/fields/Fecha_de_Desactivacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Desactivacion__c</fullName>
    <label>Fecha de Desactivacion</label>
    <type>Date</type>
</CustomField>