force-app/main/default/objects/VisMed_Bajas__c/fields/Fecha_de_Reactivacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Reactivacion__c</fullName>
    <label>Fecha de Reactivación</label>
    <type>Date</type>
</CustomField>