force-app/main/default/objects/VisMed_Bajas__c/fields/Institucion__c.field-meta.xml
<CustomField>
    <fullName>Institucion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Institucion</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Consultorio, Farmacia, Institución</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bajas (Institucion)</relationshipLabel>
    <relationshipName>Baja_de_Domicilio</relationshipName>
    <type>Lookup</type>
</CustomField>