force-app/main/default/objects/VisMed_Bajas__c/fields/Motivo_de_la_Baja__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_la_Baja__c</fullName>
    <label>Motivo de la Baja</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No ejerce más la profesión</fullName>
            </value>
            <value>
                <fullName>Fallecimiento</fullName>
            </value>
            <value>
                <fullName>Bajo Potencial</fullName>
            </value>
            <value>
                <fullName>No recibe APM</fullName>
            </value>
            <value>
                <fullName>Enfermedad</fullName>
            </value>
            <value>
                <fullName>Maternidad</fullName>
            </value>
            <value>
                <fullName>Viaje</fullName>
            </value>
            <value>
                <fullName>Transferido a otro Visitador</fullName>
            </value>
            <value>
                <fullName>No trabaja más en la institución</fullName>
            </value>
            <value>
                <fullName>Baja Temporal</fullName>
                <isActive>false</isActive>
                <label>Baja Temporal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>