force-app/main/default/objects/VisMed_Bajas__c/fields/Profesional__c.field-meta.xml
<CustomField>
    <fullName>Profesional__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profesional</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bajas</relationshipLabel>
    <relationshipName>Bajas</relationshipName>
    <type>Lookup</type>
</CustomField>