force-app/main/default/objects/VisMed_Bajas__c/fields/Transferido_a__c.field-meta.xml
<CustomField>
    <fullName>Transferido_a__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transferido a</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bajas (Transferido a)</relationshipLabel>
    <relationshipName>Bajas1</relationshipName>
    <type>Lookup</type>
</CustomField>