force-app/main/default/objects/VisMed_Bajas__c/fields/VisMed_APM__c.field-meta.xml
<CustomField>
    <fullName>VisMed_APM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>APM</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Visitador Medico</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bajas Registradas</relationshipLabel>
    <relationshipName>Bajas_Registradas</relationshipName>
    <type>Lookup</type>
</CustomField>