force-app/main/default/objects/VisMed_Bajas__c/recordTypes/Institucion.recordType-meta.xml
<RecordType>
    <fullName>Institucion</fullName>
    <active>true</active>
    <label>Institución</label>
</RecordType>