force-app/main/default/objects/VisMed_Bajas__c/recordTypes/Otro_Profesional.recordType-meta.xml
<RecordType>
    <fullName>Otro_Profesional</fullName>
    <active>true</active>
    <label>Otro Profesional</label>
</RecordType>