force-app/main/default/objects/VisMed_Bajas__c/recordTypes/Profesional_de_la_Salud.recordType-meta.xml
<RecordType>
    <fullName>Profesional_de_la_Salud</fullName>
    <active>true</active>
    <label>Profesional de la Salud</label>
</RecordType>