force-app/main/default/objects/VisMed_Bajas__c/recordTypes/Seguimiento.recordType-meta.xml
<RecordType>
    <fullName>Seguimiento</fullName>
    <active>true</active>
    <label>Seguimiento</label>
</RecordType>