force-app/main/default/objects/VisMed_Bajas__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Fecha_de_Desactivacion__c</columns>
    <columns>Fecha_de_Reactivacion__c</columns>
    <columns>Estado__c</columns>
    <columns>VisMed_APM__c</columns>
    <columns>Motivo_de_la_Baja__c</columns>
    <columns>Profesional__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VisMed_APM__c</field>
        <operation>contains</operation>
        <value>ibarra</value>
    </filters>
    <label>All</label>
</ListView>